--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
-Django==3.2.25
-django-filter==21.1
-djangorestframework==3.15.1
-importlib-resources==5.4.0
+asgiref==3.9.1
+attrs==25.3.0
+Django==5.2.6
+django-filter==25.1
+djangorestframework==3.16.1
+drf-spectacular==0.28.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+psycopg==3.2.10
+psycopg-binary==3.2.10
+pyrsistent==0.20.0
+python-dotenv==1.1.1
 pytz==2025.2
-sqlparse==0.4.4
-typing-extensions==4.1.1
-zipp==3.6.0
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.27.1
+setuptools==80.9.0
+sqlparse==0.5.3
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+wheel==0.45.1
+zipp==3.23.0
