--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.3.0
 Django==5.2.6
 django-filter==25.1
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.28.0
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
@@ -11,6 +12,7 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 psycopg==3.2.10
 psycopg-binary==3.2.10
+PyJWT==2.10.1
 pyrsistent==0.20.0
 python-dotenv==1.1.1
 pytz==2025.2
