--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.9.1
 attrs==25.3.0
+colorama==0.4.6
 Django==5.2.6
 django-filter==25.1
 djangorestframework==3.16.1
@@ -8,12 +9,18 @@ drf-spectacular==0.28.0
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 inflection==0.5.1
+iniconfig==2.1.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+packaging==25.0
+pluggy==1.6.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
+Pygments==2.19.2
 PyJWT==2.10.1
 pyrsistent==0.20.0
+pytest==8.4.2
+pytest-django==4.11.1
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
